--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,11 @@ plugins {
 	id 'org.springframework.boot' version '2.7.4'
 	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
 	id 'java'
+        id 'maven-publish'
 }
 
 group = 'com.ibm'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
 
 configurations {
 	compileOnly {
@@ -14,9 +14,23 @@ configurations {
 	}
 }
 
-repositories {
-	mavenCentral()
+publishing {
+
+  repositories {
+    maven {
+      name = "GitHubPackages"
+      url = "https://maven.pkg.github.com/vishwanath-puranik/moves-gh-actions"
+      credentials {
+        username = System.getenv("GITHUB_ACTOR")
+        password = System.getenv("GITHUB_TOKEN")
+      }
+    }
+  }
 }
+
+\\repositories {
+\\	mavenCentral()
+\\}
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -30,6 +44,6 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-//tasks.named('test') {
+tasks.register('publish') {
 //	useJUnitPlatform()
-//}
+}
