--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,9 @@ publishing {
   }
 }
 
-//repositories {
-//	mavenCentral()
-//}
+repositories {
+	mavenCentral()
+}
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
