--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,8 @@ publishing {
       name = "GitHubPackages"
       url = "https://maven.pkg.github.com/vishwanath-puranik/moves-gh-actions"
       credentials {
-        username = System.getenv("GITHUB_ACTOR")
-        password = System.getenv("GITHUB_TOKEN")
+        username = System.getenv("GH_ACTOR")
+        password = System.getenv("GH_TOKEN")
       }
     }
   }
