--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,14 @@ publishing {
       }
     }
   }
+
+        publications {
+            gpr(MavenPublication) {
+                from(components.java)
+            }
+        }
+
+
 }
 
 repositories {
