--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ publishing {
         publications {
             gpr(MavenPublication) {
                 from(components.java)
+                version = "1.0"
             }
         }
 
