--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.ibm'
-version = '0.0.1-SNAPSHOT'
+version = '1.0'
 
 configurations {
 	compileOnly {
@@ -29,8 +29,7 @@ publishing {
 
         publications {
             gpr(MavenPublication) {
-                from(components.java)
-                version = "1.0"
+                from components.java
             }
         }
 
