--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,8 @@ publishing{
 			name="loginRepo"
 			url="https://github.com/vishwanath-puranik/moves-gh-actions"
 			credentials{
-				username=System.getenv("GH_ACTOR")
-				password=System.getenv("GH_TOKEN")
+				username='vishwanath-puranik'
+				password='Esprit66$$'
 			}
 		}
 	}
