--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,8 @@ publishing{
 			name="loginRepo"
 			url="https://github.com/vishwanath-puranik/moves-gh-actions"
 			credentials{
-				username='vishwanath-puranik'
-				password=''
+				username=System.getenv("GH_ACTOR")
+				password=System.getenv("GH_TOKEN")
 			}
 		}
 	}
