--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -35,13 +35,10 @@ jobs:
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: build
-
-    # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
-    # the publishing section of your build.gradle
-    - name: Publish to GitHub Packages
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+        
+    - name: Archive test report
+      uses: actions/upload-artifact@v2
       with:
-        arguments: publish
-      env:
-        username: ${{ github.actor }}
-        password: ${{ secrets.G_TOKEN }}
+        name: Test report
+        path: build/libs
+
