--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -39,6 +39,5 @@ jobs:
     - name: Archive test report
       uses: actions/upload-artifact@v2
       with:
-        name: Test report
+        name: app-jar
         path: build/libs
-
