--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -41,3 +41,9 @@ jobs:
       with:
         name: app-jar
         path: build/libs
+
+    - name: Retrieve saved Docker image
+      uses: actions/download-artifact@v2
+      with:
+        name: app-jar2
+        path: build/libs
