--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -45,5 +45,5 @@ jobs:
     - name: Retrieve saved Docker image
       uses: actions/download-artifact@v2
       with:
-        name: app-jar2
+        name: app-jar
         path: build/libs
