--- a/.github/workflows/build-kustom.yml
+++ b/.github/workflows/build-kustom.yml
@@ -58,6 +58,10 @@ jobs:
       run: ls -lrt build/libs
 
 
+  build-image:
+    needs: gradle-build
+    runs-on: ubuntu-latest
+    steps:
       # Workaround: https://github.com/docker/build-push-action/issues/461
     - name: Setup Docker buildx
       uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
@@ -92,11 +96,16 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
 
   kustomize:
-    needs: gradle-build
+    needs: build-image
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout'
         uses: actions/checkout@master
+      
+      - name: 'get image digest'
+        run: |
+            echo ${{needs.build-image.outputs.Digest}}
+            
       - name: 'Kustomize Build'
         uses: karancode/kustomize-github-action@master
         with:
@@ -111,8 +120,20 @@ jobs:
             git config --global user.email "vishwanath.puranik@ibm.com"
 
 
+            git branch -r | tail -2 | head -1 > test.txt
+
+            cat test.txt
+
+            sed -i 's/  origin\/dev//g' test.txt
+
+            i=`cat test.txt`; i=$((i+1)) ; echo $i;
+
             git add .
 
-            git commit -m "committed from gh actions"
+            git commit -m "committed from tekton task"
 
-            git push 
+            git branch dev$i
+
+            git checkout dev$i
+
+            git push --set-upstream origin dev$i
