--- a/.github/workflows/build-kustom.yml
+++ b/.github/workflows/build-kustom.yml
@@ -58,6 +58,8 @@ jobs:
       run: ls -lrt build/libs
 
 
+
+    steps:
       # Workaround: https://github.com/docker/build-push-action/issues/461
     - name: Setup Docker buildx
       uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
@@ -91,6 +93,10 @@ jobs:
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
 
+      - name: 'get image digest'
+        run: |
+            echo ${{needs.build-and-push.outputs.digest}}
+
   kustomize:
     needs: gradle-build
     runs-on: ubuntu-latest
@@ -98,10 +104,7 @@ jobs:
       - name: 'Checkout'
         uses: actions/checkout@master
       
-      - name: 'get image digest'
-        run: |
-            echo ${{needs.gradle-build.outputs.Digest}}
-            
+
       - name: 'Kustomize Build'
         uses: karancode/kustomize-github-action@master
         with:
@@ -116,20 +119,9 @@ jobs:
             git config --global user.email "vishwanath.puranik@ibm.com"
 
 
-            git branch -r | tail -2 | head -1 > test.txt
-
-            cat test.txt
-
-            sed -i 's/  origin\/dev//g' test.txt
-
-            i=`cat test.txt`; i=$((i+1)) ; echo $i;
-
             git add .
 
-            git commit -m "committed from tekton task"
+            git commit -m "committed from gh task"
 
-            git branch dev$i
 
-            git checkout dev$i
-
-            git push --set-upstream origin dev$i
+            git push 
