--- a/.github/workflows/build-kustom.yml
+++ b/.github/workflows/build-kustom.yml
@@ -109,8 +109,6 @@ jobs:
     needs: gradle-build
     runs-on: ubuntu-latest
     steps:
-      - name: 'Checkout'
-        uses: actions/checkout@master
       
 
       - name: 'Kustomize Build'
@@ -118,7 +116,7 @@ jobs:
         with:
           kustomize_version: '3.0.0'
           kustomize_build_dir: './dev'
-          kustomize_output_file: "gitops/dev/rendered1.yaml"
+          kustomize_output_file: "gitops/dev/rendered.yaml"
 
       - name: Github Update
         run: |
