--- a/argo/argo.yaml
+++ b/argo/argo.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: sample-api
+  name: slogin-vault2
   namespace: test
 spec:
   destination:
@@ -9,7 +9,7 @@ spec:
     server: 'https://kubernetes.default.svc'
   project: default
   source:
-    path: ./dev
-    repoURL: 'https://github.com/vishwanath-puranik/moves-gitops.git'
-    targetRevision: dev9 
+    path: ./gitops/dev
+    repoURL: 'https://github.com/vishwanath-puranik/moves-gh-actions.git'
+    targetRevision: master
 
