--- a/.github/workflows/build-kustom.yml
+++ b/.github/workflows/build-kustom.yml
@@ -7,6 +7,15 @@
 
 name: Gradle Package
 
+env:
+  # 🖊️ EDIT your repository secrets to log into your OpenShift cluster and set up the context.
+  # See https://github.com/redhat-actions/oc-login#readme for how to retrieve these values.
+  # To get a permanent token, refer to https://github.com/redhat-actions/oc-login/wiki/Using-a-Service-Account-for-GitHub-Actions
+  OPENSHIFT_SERVER: ${{ secrets.OPENSHIFT_SERVER }}
+  OPENSHIFT_TOKEN: ${{ secrets.OPENSHIFT_TOKEN }}
+  # 🖊️ EDIT to set the kube context's namespace after login. Leave blank to use your user's default namespace.
+  OPENSHIFT_NAMESPACE: "test"
+
 on:
   push:
     branches: [ "master" ]
@@ -101,27 +110,61 @@ jobs:
 
           cat ./dev/patch.yaml
 
-    - name: 'Kustomize Build'
-      uses: karancode/kustomize-github-action@master
-      with:
-        kustomize_version: '3.0.0'
-        kustomize_build_dir: './dev'
-        kustomize_output_file: "gitops/dev/rendered2.yaml"
-
-    - name: Github Update
-      run: |
-          git config --global user.name "vishwanath-puranik"
-
-          git config --global user.email "vishwanath.puranik@ibm.com"
 
 
-          git add .
+    
 
-          git commit -m "committed from gh task"
-          
-          git branch dev
-          
-          git checkout dev
+  kustomize:
+    needs: gradle-build
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'Checkout'
+        uses: actions/checkout@master
+      
+
+      - name: 'Kustomize Build'
+        uses: karancode/kustomize-github-action@master
+        with:
+          kustomize_version: '3.0.0'
+          kustomize_build_dir: './dev'
+          kustomize_output_file: "gitops/dev/rendered1.yaml"
+
+     # - name: Github Update
+      #  run: |
+      #      git config --global user.name "Vishwanath-puranik"
+
+      #      git config --global user.email "vishwanath.puranik@ibm.com"
 
 
-          git push --set-upstream origin dev
+      #      git add .
+
+      #      git commit -m "committed from gh task"
+
+
+       #     git push
+
+  gitops-job:
+    needs: kustomize
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'Checkout'
+        uses: actions/checkout@master
+      
+
+      - name: Install oc
+        uses: redhat-actions/openshift-tools-installer@v1
+        with:
+          oc: 4
+
+    # https://github.com/redhat-actions/oc-login#readme
+      - name: Log in to OpenShift
+        uses: redhat-actions/oc-login@v1
+        with:
+          openshift_server_url: ${{ env.OPENSHIFT_SERVER }}
+          openshift_token: ${{ env.OPENSHIFT_TOKEN }}
+          insecure_skip_tls_verify: true
+          namespace: ${{ env.OPENSHIFT_NAMESPACE }}
+
+      - name: deploy argo job
+        run: |
+            oc apply -f ./argo/argo.yaml
