--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,4 +41,4 @@ jobs:
       uses: actions/checkout@v3
     - name: SQL step
       run: |
-          sqlcmd -S 169.55.186.119,9443 -U sa -P Sql2019isfast -i test.sql
+          sqlcmd -S ${{ secrets.DB_HOST }} -U ${{ secrets.DB_USER }} -P ${{ secrets.DB_PWD }} -i test.sql
