--- a/.github/workflows/anchore.yml
+++ b/.github/workflows/anchore.yml
@@ -32,6 +32,8 @@ jobs:
       id: scan
       with:
         image: "mcr.microsoft.com/dotnet/aspnet:6.0"
+        fail-build: false
+        #severity-cutoff: critical
     - name: Upload vulnerability report
       uses: github/codeql-action/upload-sarif@v2
       with:
