--- a/.github/workflows/anchore.yml
+++ b/.github/workflows/anchore.yml
@@ -40,6 +40,8 @@ jobs:
         sarif_file: ${{ steps.scan.outputs.sarif }}
     - name: Download vulnerability report
       uses: github/codeql-action/download-sarif@v2
+      with:
+        sarif_file: ${{ steps.scan.outputs.sarif }}
     - name: cat sarif report
       run : |
         ls -lrt
