--- a/.github/workflows/anchore.yml
+++ b/.github/workflows/anchore.yml
@@ -34,16 +34,6 @@ jobs:
         image: "mcr.microsoft.com/dotnet/aspnet:6.0"
         fail-build: false
         #severity-cutoff: critical
-    - name: Upload vulnerability report
-      uses: github/codeql-action/upload-sarif@v2
-      with:
-        sarif_file: ${{ steps.scan.outputs.sarif }}
-    - name: Download vulnerability report
-      uses: github/codeql-action/download-sarif@v2
-      with:
-        sarif_file: ${{ steps.scan.outputs.sarif }}
-    - name: cat sarif report
-      run : |
-        ls -lrt
-        cat *.sarif
+    - name: Inspect action SARIF report
+      run: cat ${{ steps.scan.outputs.sarif }}
            
